# aiter8

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
experiments/010-first/: 10-test-gsheets.ipynb  sample.ipynb  sample1.py  sample2.py  sample3.py
src/aiter8/: llm.py
src/iter8/: __init__.py  data_sheet.py
tests/: conftest.py  test_data_sheet.py  test_data_sheet_calculate_updates_unit.py  test_data_sheet_new_fields.py
