[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiter8"
version = "0.1.0" # Initial version
authors = [
    { name="Dima Unk", email="dima.unk.ai@gmail.com" },
]
description = "A Python library for interactively updating Google Sheets, facilitating collaborative workflows involving LLMs and human edits."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8" # Assumes Python 3.8+ compatibility, adjust if needed
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pandas>=1.3",   # Specify minimum viable versions
    "gspread>=5.0",
    # Add any other core runtime dependencies here later
]

# Project URLs
[project.urls]
"Homepage" = "https://github.com/diunko/aiter8"
"Repository" = "https://github.com/diunko/aiter8"

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.0",      # For running tests
    "build>=0.7",     # For building the package locally
    "twine>=3.0",     # For uploading the package to PyPI
]

# Tool-specific configuration
[tool.setuptools]
# Tells setuptools that your package code is inside the 'src' directory
package-dir = {"" = "src"}
# Explicitly list the main package
packages = ["aiter8"] 